--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
             
             <div class="space-y-4">
                 <!-- New Version -->
-                <a href="https://www.dropbox.com/scl/fi/cfjwlx1m0ege67dlxn8dm/VeyrathInstaller.zip?rlkey=r03vf1o6srttjgzgmkq7jmi18&st=19rrg6xj&dl=1" class="block w-full group relative overflow-hidden bg-brand p-5 clip-diagonal interactive hover:scale-[1.02] transition-transform">
+                <a href="https://www.dropbox.com/scl/fi/95a1t87zziyq5bhe9yi5y/VeyrathInstaller.zip?rlkey=tz9fetk5oktniaeosra4iiodc&st=7g15tkxh&dl=1" class="block w-full group relative overflow-hidden bg-brand p-5 clip-diagonal interactive hover:scale-[1.02] transition-transform">
                     <div class="relative z-10 flex items-center justify-between">
                         <div class="flex flex-col text-left">
                             <span class="font-black text-black uppercase tracking-widest text-lg">New Version</span>
