--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ footer{
     <div class="download-box">
       <a
         class="btn primary"
-        href="https://www.dropbox.com/scl/fi/uxnqps1svjbabjzzunan0/SylrethInstaller.zip?rlkey=wut9tdgpgqmnqb8o7v80m7pb1&st=titp5ss8&dl=0"
+        href="https://www.dropbox.com/scl/fi/uxnqps1svjbabjzzunan0/SylrethInstaller.zip?rlkey=wut9tdgpgqmnqb8o7v80m7pb1&e=1&st=titp5ss8&dl=1"
         target="_blank"
         rel="noopener noreferrer"
       >
