--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ body.modal-open{overflow:hidden}
 .dl-ico{font-size:18px;opacity:.9}
 </style>
 <script>
-const DOWNLOAD_NEW = "https://www.dropbox.com/scl/fi/9ewits15gldz044tgwgxp/SylrethInstallerV2.zip?rlkey=unku2y3mcuq1wwiuyx4vm8ayo&st=7xmd2nl6&dl=1";
+const DOWNLOAD_NEW = "https://www.dropbox.com/scl/fi/px2437smsuurlgz6jjw0g/SylrethV3Installer.zip?rlkey=bumgyy8kgvodqsjc195o21qun&st=7070zgkc&dl=1";
 const DOWNLOAD_OLD = "https://www.dropbox.com/scl/fi/0dzw0nkitpq4jifc9nyt3/Sylreth_OldVersion.zip?rlkey=90t9xekizbf9xx9wbv466qr61&st=2m7nsu4d&dl=1";
 
 function openDownloadModal(){
@@ -432,7 +432,7 @@ document.addEventListener("keydown", (e)=>{ if(e.key === "Escape") closeDownload
     <div class="download-box">
       <a
         class="btn primary"
-        href="https://www.dropbox.com/scl/fi/9ewits15gldz044tgwgxp/SylrethInstallerV2.zip?rlkey=unku2y3mcuq1wwiuyx4vm8ayo&st=7xmd2nl6&dl=1"
+        href="https://www.dropbox.com/scl/fi/px2437smsuurlgz6jjw0g/SylrethV3Installer.zip?rlkey=bumgyy8kgvodqsjc195o21qun&st=7070zgkc&dl=1"
         target="_blank"
         rel="noopener noreferrer"
        data-download="1">Download Demo
